To external CSS

--- a/Tester.html
+++ b/Tester.html
@@ -3,127 +3,10 @@
         <title>
         Capoeira Songbook|Avisa Meu Mano
     </title>
+    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="general.css">
+    <link rel="stylesheet" href = "song.css">
 
-    <style>
-        
-        body{
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 100%;
-            margin: 4vw;
-            /*
-            background: rgb(165, 160, 100 ,1);*/
-            background: #B0C4DE;
-            color: #232642;
-        }
-/* menu.css */
-        div.nav{
-        /*    
-            width: 10vw;
-            margin: 0;
-            padding: 0;
-            margin-right: 4vw;
-            float: left;
-            min-height: 100%;
-            display: inline;
-        */  
-
-            transition-property: left;
-            /*
-            transition-property: ;*/
-            transition-duration: 4s;
-            transition-delay: 2s;
-
-            height: 100%; /* 100% Full-height */
-            width: 100px; /* 0 width - change this with JavaScript */
-            position: fixed; /* Stay in place */
-            z-index: 1; /* Stay on top */
-            top: 0;
-            left: -80;
-            background-color: #232642; /* Not Black*/
-            overflow-x: hidden; /* Disable horizontal scroll */
-            padding-top: 60px; /* Place content 60px from the top */
-            transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */ 
-        }
-/* menu.css */
-        div.nav:hover{
-            left: 0;
-            background-color: #B0C4DE;
-        }
-/* song.css */
-        div.FortmattingDiv{
-            display: inline;
-            transition: margin-left .5s;
-            padding: 20px;
-        }
-
-        h1 {
-            background-color: rgba(0, 39, 118,1);
-            font-size: 2.5em;
-            color:rgba(0, 156 , 59, 1)
-        }
-/* song.css */
-        div.song{
-            display: table;
-            font-size: 1em;
-        }
-/* song.css */
-        div.row{
-            display: table-row;
-            width: auto;
-        }
-/* song.css */
-        div.cell{
-            display: table-cell;
-            width: auto;
-            float:left;
-            width: 50%;
-            min-height: 1em;
-            word-wrap: break-word;
-        }
-/* song.css */
-        div.bold{
-            font-weight: bold;
-        }
-/* general.css */
-        ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            width: 10vw;
-        }
-/* general.css */
-        li a {
-            display: block;
-            width: 10vw;
-            padding: 8px 16px;
-            /*border: 1px solid #fff;*/
-            background: #B0C4DE;
-            color: #232642;
-            text-decoration: none;
-            transition: 0.3s;
-        }
-
-        li a.active {
-            background-color: #04AA6D;
-            color: white;
-        }
-/* general.css */
-        li a:hover {
-        background-color: #232642;
-        color: #B0C4DE;
-        }
-/* general.css */
-        div.Banner{
-            background-color: #232642;
-            max-width: auto;
-        }
-/* general.css*/
-        div.Banner>img{
-            max-width: 100%;
-            height: auto;
-        }
-
-    </style>
     </head>
     
     <body>
