--- a/Home.html
+++ b/Home.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="Home.html">Home</a></li>
                     <li><a href="Actual_Index_Test.html">Index</a></li>
-                    <li><a href="#contact">Capoeira</a></li>
+                    <li><a href="ABC.html">Capoeira</a></li>
                     <li><a href="#about">Samba</a></li>
                 </ul>
             <div class = "menu">
