--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         <div class="Banner" id = 'top'>
             <img src="/CapoeiraSongbook/img/longandthin.png">
         </div>  
-        
+        <div "style" = "left: 50px;">
         <audio controls>
               <source src="hoje a terra vai tremer 2.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
+        </div>
         
         <div class = "nav">
                 <ul>
