--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
         <link rel="stylesheet" href="/CapoeiraSongbook/css/song.css">
         <link rel="stylesheet" href="/CapoeiraSongbook/css/home.css">
         <link rel="shortcut icon" type="image/png" href="/CapoeiraSongbook/img/favicon.png">
+        
+        <style>
+            div.audio{
+                display: block;
+                left:500px;
+            }
+        </style>  
         </head>
     <body>
     
         <div class="Banner" id = 'top'>
             <img src="/CapoeiraSongbook/img/longandthin.png">
         </div>  
-        <div "style" = "display:block;left: 500px;">
+        <div class = "audio">
         <audio controls>
               <source src="hojeaterravaitremer.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
